--- a/src/index.scss
+++ b/src/index.scss
@@ -71,3 +71,11 @@ table {
 .highlighted {
    background-color: var(--table-highlight-color)
 }
+
+.messageBox {
+  white-space: pre-wrap;
+}
+
+.btn-disabled {
+  border-color: var(--table-highlight-color)
+}
