--- a/src/index.scss
+++ b/src/index.scss
@@ -76,6 +76,9 @@ table {
   white-space: pre-wrap;
 }
 
-.btn-disabled {
-  border-color: var(--table-highlight-color)
+.custom-file-upload {
+  cursor: pointer;
+}
+input[type="file"] {
+  display: none;
 }
